--- a/Site/Web2/css/estiloRankingAluno.css
+++ b/Site/Web2/css/estiloRankingAluno.css
@@ -69,9 +69,9 @@ tbody tr:hover{
     margin-top: 1vh; */
     color: gold;
 }
-#ran{
+/* #ran{
     margin-top: 4vh !important;
-}
+} */
 #ran p{
     font-size: 1.5rem!important;
 }
@@ -88,10 +88,10 @@ label{
     font-size: 1.5rem !important;
 }
 .indiciplina {
-    min-height: 80vh;
+    min-height: 85vh;
     max-height: 100%;
-    padding-top: 10vh;
-    padding-bottom: 5vh;
+    padding-top: 5rem;
+    padding-bottom: 2rem;
 }
 
 /* //Extra small devices (portrait phones, less than 576px) */
@@ -132,7 +132,7 @@ label{
         width: 2rem !important;
     }
     h2 {
-        font-size: 4vh !important;
+        font-size: 1.5rem !important;
     }
     
 }
@@ -143,7 +143,7 @@ label{
     #rodape {
         bottom: unset;
         height: max-content !important;
-        margin-top: 4vh !important;
+        margin-top: 2rem !important;
         
     }
 
@@ -386,7 +386,7 @@ label{
     
     select{
         height: auto !important;
-        font-size: 2vh !important;
+        /* font-size: 2vh !important; */
     }
     
     #trp{
@@ -426,6 +426,6 @@ label{
     }
     
     label{
-        font-size: 3.5vh !important;
+        font-size: 3.5rem !important;
     }
 }
